--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.3.0",
+    "@angular/animations": "^13.3.0",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
@@ -18,6 +18,14 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "angular-weblineindia-qrcode-scanner": "^1.0.0",
+    "keycloak-angular": "^8.4.0",
+    "keycloak-js": "^15.0.2",
+    "ngx-json-viewer": "^3.0.2",
+    "ngx-mqtt": "^9.0.5",
+    "primeicons": "^5.0.0",
+    "primeng": "^13.2.0",
+    "quagga": "^0.12.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
